Fixes #227. Add horizontal scrollbar to code block

--- a/site/assets/docs.css
+++ b/site/assets/docs.css
@@ -49,6 +49,7 @@ code[class*="language-"] {
   background-color: #f8f8f8;
   padding: 20px;
   -webkit-font-smoothing: auto;
+  overflow-x: scroll;
 }
 
 .clearfix {
